--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <title>Bienvenido a Hyperblog 2.0</title>
+    <title>Hyperblog 2.0 es un blog del futuro</title>
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
@@ -13,7 +13,7 @@
         <span id="tagline">Tu blog de confianza</span>
       </div>
       <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
         <p>Y este es el p&aacute;rrafo de inicio donde vamos a
           explicar las cosas incre&iacute;bles que se pueden hacer con
           ramas</p>
